# Customer_Life_Time_Value_Prediction_Engine

./: .env.example  .gitignore  README.md  notebook_04_patch_cells.md  pyproject.toml
backend/: __init__.py  config.py
backend/data/: __init__.py  load_data.py
backend/db/: __init__.py  models.py  supabase_client.py
backend/features/: __init__.py  cohorts.py  duckdb_agg.py  rfm.py  sequences.py
backend/ml/: __init__.py  bgnbd_model.py  causal_dag.py  causal_heterogeneous.py  causal_model.py  cdnow_validation.py  cold_start.py  embedding_store.py  explainability.py  fusion.py  fusion_optuna.py  hyperparameter_tuning.py  optuna_tuner.py  scoring_engine.py  segmentation.py  sequence_dataset.py  trainer.py  transformer_evaluator.py  transformer_model.py  transformer_onnx.py  wandb_tracker.py
notebooks/: 01_eda.ipynb  02_rfm_cohort_analysis.ipynb  03_bgnbd_gamma_gamma.ipynb  04_transformer_training.ipynb  04b_onnx_export.ipynb  05_causal_ml.ipynb  06_fusion_evaluation.ipynb
notebooks/wandb/run-20260421_113320-8bxh6i1y/: run-8bxh6i1y.wandb
notebooks/wandb/run-20260421_113320-8bxh6i1y/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20260421_113320-8bxh6i1y/files/media/table/: rfm_sample_1_7fd1929531ba07eb44b4.table.json
notebooks/wandb/run-20260421_122249-j5zlqq98/: run-j5zlqq98.wandb
notebooks/wandb/run-20260421_122249-j5zlqq98/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20260421_122249-j5zlqq98/files/media/table/: rfm_sample_1_b723170a38a8fb488ce7.table.json
notebooks/wandb/run-20260421_124810-nhpbs1qf/: run-nhpbs1qf.wandb
notebooks/wandb/run-20260421_124810-nhpbs1qf/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20260421_124810-nhpbs1qf/files/media/table/: rfm_sample_1_397cb812c32e007e5d87.table.json
supabase/: schema.sql
supabase/migrations/: 001_initial_schema.sql  002_bgnbd_tables.sql  003_transformer_tables.sql  004_causal_tables.sql  005_fusion_tables.sql  006_fusion_data_quality_backfill.sql
tests/: __init__.py  test_bgnbd_model.py  test_causal_dag.py  test_causal_heterogeneous.py  test_causal_model.py  test_cdnow_validation.py  test_cleaning.py  test_cold_start.py  test_duckdb_agg.py  test_explainability.py  test_fusion.py  test_hyperparameter_tuning.py  test_onnx_export.py  test_rfm_pipeline.py  test_scoring_engine.py  test_sequence_dataset.py  test_transformer_model.py
