[project]
name = "ltv-prediction"
version = "0.1.0"
description = "Customer Lifetime Value Prediction Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Data Engineering ─────────────────────────────────────
    "polars>=0.20.16",
    "duckdb>=0.10.2",
    "pyarrow>=15.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",          # kept minimal: boundary conversion for lifetimes

    # ── Database ─────────────────────────────────────────────
    "supabase>=2.4.2",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "alembic>=1.13.1",

    # ── ML core (Phases 1–2) ──────────────────────────────────
    "scikit-learn>=1.4.1",
    "lifetimes>=0.11.3",
    "scipy>=1.12.0",

    # ── API / Validation ─────────────────────────────────────
    "fastapi>=0.110.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",

    # ── Observability / Tracking ─────────────────────────────
    "wandb>=0.16.6",
    "loguru>=0.7.2",
    "rich>=13.7.1",

    # ── Utilities ────────────────────────────────────────────
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
    "tqdm>=4.66.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.3",
    "jupyterlab>=4.1.5",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "plotly>=5.20.0",
    "kaleido>=0.2.1",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.1",
    "mypy>=1.9.0",
    "ipdb>=0.13.13",
]

ml = [
    # Phase 3 — Deep Learning
    "torch>=2.2.2",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.3",
    "xgboost>=2.0.3",
    "optuna>=3.6.1",
    "shap>=0.45.0",
]

causal = [
    # Phase 4 — Causal ML
    "econml>=0.15.0",
    "dowhy>=0.11.1",
]

monitoring = [
    "arize-phoenix>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.3",
    "ruff>=0.4.1",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore  = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"notebooks/*" = ["E402", "F401", "ANN"]
"tests/*"     = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
log_cli      = true
log_level    = "INFO"