[project]
name = "ltv-prediction"
version = "0.1.0"
description = "Customer Lifetime Value Prediction Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Data Engineering ─────────────────────────────────────
    "polars",
    "duckdb",
    "pyarrow",
    "numpy",
    "pandas",

    # ── Database ─────────────────────────────────────────────
    "supabase",
    "sqlalchemy",
    "psycopg2-binary",
    "asyncpg",
    "pgvector",
    "alembic",

    # ── ML core (Phases 1–2) ──────────────────────────────────
    "scikit-learn",
    "lifetimes",
    "scipy",

    # ── API / Validation ─────────────────────────────────────
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "uvicorn[standard]",
    "httpx",

    # ── Observability / Tracking ─────────────────────────────
    "wandb",
    "loguru",
    "rich",

    # ── Utilities ────────────────────────────────────────────
    "python-dotenv",
    "typer",
    "tqdm",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "seaborn",
    "plotly",
    "kaleido",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipdb",
]

ml = [
    "torch",
    "onnx",
    "onnxruntime",
    "xgboost",
    "optuna",
    "shap",
]

causal = [
    "econml",
    "dowhy",
]

monitoring = [
    "arize-phoenix",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore  = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"notebooks/*" = ["E402", "F401", "ANN"]
"tests/*"     = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
log_cli      = true
log_level    = "INFO"